[gd_scene load_steps=3 format=3 uid="uid://dq4euj3vbhcd3"]

[ext_resource type="Script" path="res://addons/table_data_editor/src/table_data_editor/export_preview/export_preview.gd" id="1_iqbuq"]

[sub_resource type="ButtonGroup" id="ButtonGroup_drl5b"]

[node name="export_preview" type="MarginContainer"]
editor_description = "导出预览"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_iqbuq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="select_items" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="csv" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/select_items"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_drl5b")
text = "CSV"

[node name="json" type="CheckBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/select_items"]
layout_mode = 2
button_group = SubResource("ButtonGroup_drl5b")
text = "JSON"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="selected_item_param" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="head_as_key_panel" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel"]
layout_mode = 2
tooltip_text = "作为 key 的行"
text = "Key Row: "

[node name="head_line_box" type="SpinBox" parent="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "作为 key 的行"
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.462745)
layout_mode = 2
text = "Sample data in the first few lines..."

[node name="text_box" type="TextEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="compact" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "紧凑的格式导出，这样JSON会占用空间会最小。数据量不是非常大可以不用勾选"
text = "compact"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="export" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Export"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="save_dialog" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(343, 159)
filters = PackedStringArray("*.json; JSON")

[connection signal="value_changed" from="VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer/selected_item_param/head_as_key_panel/head_line_box" to="." method="_on_head_line_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/export" to="." method="_on_export_pressed"]
[connection signal="file_selected" from="save_dialog" to="." method="_on_save_dialog_file_selected"]
